--- a/betapublic/crop_detail.html
+++ b/betapublic/crop_detail.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crops Detail</title>
+    <title>BetaHarvest</title>
     <link
       rel="icon"
       sizes="64x64"
       href="images/logobeta.svg"
       type="image/x-svg"
     />
-
     <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0f0f0;
+      }
+
       body {
         font-family: "Roboto", sans-serif;
         background-color: #eceff1;
@@ -21,6 +27,7 @@
         flex-direction: column;
         min-height: 100vh;
       }
+
       header {
         background-color: #ffffff;
         padding: 10px 20px;
@@ -106,6 +113,58 @@
       }
 
       main {
+        padding: 20px;
+        margin-top: 100px;
+      }
+      .crop-info {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+
+      .crop-card {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        text-align: center;
+      }
+
+      .crop-card img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
+
+      .crop-card h2 {
+        margin: 10px 0;
+      }
+
+      .crop-card p {
+        margin: 10px 0;
+      }
+
+      .crop-card ul {
+        list-style-type: none;
+        padding: 0;
+      }
+
+      .crop-card li {
+        margin: 5px 0;
+      }
+
+      @media (min-width: 768px) {
+        .crop-info {
+          grid-template-columns: 1fr 1fr;
+        }
+      }
+
+      @media (min-width: 1024px) {
+        .crop-info {
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+        }
+      }
+      .senior {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -184,6 +243,23 @@
           transform: rotate(360deg);
         }
       }
+      ::-webkit-scrollbar {
+        width: 12px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: #e6f5f0;
+        border-radius: 10px;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #6d796e;
+        border-radius: 10px;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background: #007ea6;
+      }
     </style>
   </head>
   <body>
@@ -205,8 +281,47 @@
         </div>
       </div>
     </header>
-
     <main>
+      <div class="crop-info">
+        <div class="crop-card">
+          <img src="images/tomatoes.jpg" alt="Tomatoes" />
+          <h2>Tomatoes</h2>
+          <p>Planting Season:</p>
+          <ul>
+            <li>Rainy Season (May - September)</li>
+            <li>Dry Season (October - April)</li>
+          </ul>
+        </div>
+        <div class="crop-card">
+          <img src="images/maize.jpg" alt="Maize" />
+          <h2>Maize</h2>
+          <p>Planting Season:</p>
+          <ul>
+            <li>Rainy Season: April - June</li>
+            <li>Dry Season: October - November</li>
+          </ul>
+        </div>
+        <div class="crop-card">
+          <img src="images/groundnut.jpg" alt="Groundnut" />
+          <h2>Groundnut</h2>
+          <p>Planting Season:</p>
+          <ul>
+            <li>Northern Nigeria: April to June</li>
+            <li>Southern Nigeria: May to July</li>
+          </ul>
+        </div>
+        <div class="crop-card">
+          <img src="images/cassava.jpeg" alt="Cassava" />
+          <h2>Cassava</h2>
+          <p>Planting Season:</p>
+          <ul>
+            <li>Dry Season (October - April)</li>
+            <li>Rainy Season (May - June)</li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <main class="senior">
       <h1>Find More detail about a crop</h1>
       <div class="search-container">
         <input type="text" placeholder="Search..." />
@@ -217,7 +332,16 @@
       <div id="loader" class="loader"></div>
       <div id="output" class="output-container"></div>
     </main>
-
+    <script>
+      window.toggleSettingsMenu = function () {
+        const settingsMenu = document.getElementById("settingsMenu");
+        const menuIcon = document.getElementById("menuIcon");
+        const isOpen = settingsMenu.style.display === "block";
+        settingsMenu.style.display = isOpen ? "none" : "block";
+        menuIcon.classList.add("rotate");
+        setTimeout(() => menuIcon.classList.remove("rotate"), 500);
+      };
+    </script>
     <script type="module">
       import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
       document.addEventListener("DOMContentLoaded", () => {
@@ -300,15 +424,6 @@
           }
         });
       });
-
-      window.toggleSettingsMenu = function () {
-        const settingsMenu = document.getElementById("settingsMenu");
-        const menuIcon = document.getElementById("menuIcon");
-        const isOpen = settingsMenu.style.display === "block";
-        settingsMenu.style.display = isOpen ? "none" : "block";
-        menuIcon.classList.add("rotate");
-        setTimeout(() => menuIcon.classList.remove("rotate"), 500);
-      };
     </script>
   </body>
 </html>
