--- a/betapublic/login.html
+++ b/betapublic/login.html
@@ -335,7 +335,7 @@
             required
           />
 
-          <button type="submit">Login</button>
+          <button type="submit" onclick="sessionStorage.clear();">Login</button>
           <p class="switch-form">
             Not registered? <a href="/signup.html">Signup</a>
           </p>
