--- a/betapublic/signup.html
+++ b/betapublic/signup.html
@@ -520,7 +520,7 @@
 
             sessionStorage.setItem("userID", credentials.user.uid);
             sessionStorage.setItem("userFullname", signup_fullname.value);
-            window.location.href = "dashboard.html";
+            window.location.href = "login.html";
 
             const messageDiv = document.createElement("div");
             messageDiv.className = "success-message";
