--- a/betapublic/dashboard.html
+++ b/betapublic/dashboard.html
@@ -366,9 +366,11 @@
 
       async function fetchWeatherData() {
         const apiKey = "6643a51c878047b6aed175732241007";
+        const position = await getCurrentPosition();
+        const { latitude, longitude } = position.coords;
         try {
           const response = await fetch(
-            `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${userAddress}`
+            `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${latitude},${longitude}`
           );
           const data = await response.json();
           document.getElementById("weather-data").innerHTML = `
@@ -382,6 +384,16 @@
           console.error("Error fetching weather data:", error);
           return "Error fetching weather data.";
         }
+      }
+
+      function getCurrentPosition() {
+        return new Promise((resolve, reject) => {
+          if (!navigator.geolocation) {
+            reject(new Error("Geolocation is not supported by this browser."));
+          } else {
+            navigator.geolocation.getCurrentPosition(resolve, reject);
+          }
+        });
       }
 
       async function fetchAndDisplayCropStage() {
