small changes and image AI

--- a/betapublic/dashboard.html
+++ b/betapublic/dashboard.html
@@ -186,9 +186,9 @@
           <img src="images/menu.png" alt="menu_icon" id="menuIcon" />
         </button>
         <div class="settings-menu" id="settingsMenu">
-          <a href="dashboard.html">Dashboard</a>
           <a href="crop_detail.html">Crops Details</a>
           <a href="farmer-log.html">Farm Log</a>
+          <a href="image_AI.html">Image AI</a>
           <a href="bot.html">ChatBot</a>
           <a href="index.html" onclick="sessionStorage.clear();">Logout</a>
         </div>
