--- a/betapublic/image_AI.html
+++ b/betapublic/image_AI.html
@@ -309,6 +309,10 @@
       let imageFile; // Declare imageFile variable in the outer scope
       const imagePreview = document.getElementById("image-preview");
 
+      if (!userID) {
+        window.location.href = "login.html";
+      }
+
       document.getElementById("file-upload").addEventListener("change", (e) => {
         imageFile = e.target.files[0];
         if (imageFile) {
@@ -328,6 +332,23 @@
             "#text-prompt textarea"
           ).value;
           const alertDiv = document.getElementById("alert");
+          const userAddress = sessionStorage.getItem("userAddress");
+          const userState = sessionStorage.getItem("userState");
+          const userCrop = sessionStorage.getItem("userCrop");
+          const userCountry = sessionStorage.getItem("userCountry");
+          const fullname = sessionStorage.getItem("userFullname");
+          const todayDate = new Date().toISOString().split("T")[0];
+
+          const promt = `want you to provide the farmer with the best advice based on the image and prompt they provide to obtain the best crop yield. If the image and prompt they provide is not agriculture related, please reply with: this is not agriculture related.
+      Here are the details of the farmer:
+      - Name: ${fullname}
+      - Address: ${userAddress}
+      - State: ${userState}
+      - Country: ${userCountry}
+      - Crop: ${userCrop}
+      - Date: ${todayDate}'.... farmerprompt=>`;
+          const master_prompt = promt + " " + textPrompt;
+          console.log(master_prompt);
 
           if (imageFile && textPrompt) {
             const spinner = document.getElementById("spinner");
@@ -338,7 +359,7 @@
             alertDiv.style.display = "none";
 
             const imagePart = await fileToGenerativePart(imageFile);
-            const prompt = [textPrompt, imagePart];
+            const prompt = [master_prompt, imagePart];
 
             const genAI = new GoogleGenerativeAI(
               "AIzaSyCviXiVUSELhyRvBCT-_RK0CxxIq9nABbk"
@@ -350,6 +371,8 @@
             const result = await model.generateContent(prompt);
             const response = await result.response;
             const text = await response.text();
+
+            text = text.replace(/\*\*\*/g, "");
 
             spinner.style.display = "none";
             resultSection.style.display = "block";
