--- a/betapublic/bot.html
+++ b/betapublic/bot.html
@@ -95,6 +95,7 @@
         height: calc(100vh - var(--top-bar-height, 60px));
         /* Adjust if your top bar height changes */
         overflow-y: auto;
+        padding-bottom: 80px; /* Space for the fixed input section */
       }
 
       .chat-container {
@@ -112,6 +113,11 @@
         font-size: 24px;
         margin-top: 10px;
         height: auto;
+        position: fixed;
+        bottom: 0;
+        width: calc(100% - 40px); /* Adjust to fit padding */
+        margin: 10px;
+        box-sizing: border-box;
       }
 
       .search-box textarea {
@@ -227,8 +233,8 @@
       .settings-menu {
         display: none;
         position: absolute;
-        right: 50px;
-        padding: 15px;
+        right: 10px;
+        padding: 8px;
         top: 60px;
         background-color: white;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -296,14 +302,14 @@
         <div class="message markdown"></div>
         <div class="message markdown"></div>
       </div>
-      <div class="search-box">
-        <textarea
-          placeholder="Enter Prompt Here"
-          id="user-input"
-          rows="1"
-        ></textarea>
-        <img src="images/send_icon.png" alt="Send Button" class="send-button" />
-      </div>
+    </div>
+    <div class="search-box">
+      <textarea
+        placeholder="Enter Prompt Here"
+        id="user-input"
+        rows="1"
+      ></textarea>
+      <img src="images/send_icon.png" alt="Send Button" class="send-button" />
     </div>
     <script>
       window.toggleSettingsMenu = function () {
@@ -325,6 +331,7 @@
       const userAddress = sessionStorage.getItem("userAddress");
       const userEmail = sessionStorage.getItem("userEmail");
       const userState = sessionStorage.getItem("userState");
+      const userInput = document.getElementById("user-input");
       const userCrop = sessionStorage.getItem("userCrop");
       const userCountry = sessionStorage.getItem("userCountry");
       const fullname = sessionStorage.getItem("userFullname");
@@ -355,7 +362,7 @@
       ) {
         const model = genAI.getGenerativeModel({
           model: "gemini-1.5-pro",
-          systemInstruction: `I want you to Timmy an AI trained by clement that help farmer with question they have concerning agriculture from question ranging from best planting time from particular crop to best disease control method. overall you are design to help farmer  with their agricultural needs. Provide expert advice on crop yield optimization, disease control, and general farming practices. all conversational advice should be limited to Nigeria as a geographical area.  Answer questions clearly and concisely, using not only English language but you also have the capabilities to chat In Nigeria language like pidgin, Igbo, Yoruba, and Hausa. Offer practical solutions and tips based on the latest agricultural research. Aim to help farmers improve their productivity and sustainability. I always introduce your self as "hi, I am Timmy your Agripal that was trained by Akhimien clement design to act as farmer's  guide" always be supportive and encouraging to farmers.only introduce yourself when necessary. "if ask what model are you say you are beta 1.5 model pre-trained by clement". keep user Information in mind when making some decision in mind: User FullName: ${fullname}, User Address: ${userAddress} , User Email: ${userEmail}, User State: ${userState},  User Country: ${userCountry}.`,
+          systemInstruction: `I want you to Timmy an AI trained to that help farmer with question they have concerning agriculture from question ranging from best planting time from particular crop to best disease control method. overall you are design to help farmer  with their agricultural needs. Provide expert advice on crop yield optimization, disease control, and general farming practices. all conversational advice should be limited to Nigeria as a geographical area.  Answer questions clearly and concisely, using not only English language but you also have the capabilities to chat In Nigeria language like pidgin, Igbo, Yoruba, and Hausa. Offer practical solutions and tips based on the latest agricultural research. Aim to help farmers improve their productivity and sustainability. I always introduce your self as "hi, I am Timmy your Agripal, design to act as farmer's  guide" always be supportive and encouraging to farmers.only introduce yourself when necessary. "if ask what model are you say you are beta 1.5 model pre-trained by clement". keep user Information in mind when making some decision in mind: User FullName: ${fullname}, User Address: ${userAddress} , User Email: ${userEmail}, User State: ${userState},  User Country: ${userCountry}.`,
         });
         chat = model.startChat({
           history: [
@@ -452,6 +459,11 @@
           .replace(/\*(.*?)\*/g, "<em>$1</em>") // italic
           .replace(/\n/g, "<br>"); // line breaks
       }
+
+      userInput.addEventListener("input", function () {
+        this.style.height = "auto";
+        this.style.height = this.scrollHeight + "px";
+      });
     </script>
   </body>
 </html>
