--- a/betapublic/crop_detail.html
+++ b/betapublic/crop_detail.html
@@ -162,7 +162,7 @@
         flex-direction: column;
         align-items: center;
         padding: 20px;
-        margin-top: 90px;
+        margin-top: 1px;
         flex-grow: 1;
       }
 
@@ -304,7 +304,7 @@
           </ul>
         </div>
         <div class="crop-card">
-          <img src="images/cassava.jpeg" alt="Cassava" />
+          <img src="images/cassava.jpg" alt="Cassava" />
           <h2>Cassava</h2>
           <p>Planting Season:</p>
           <ul>
